<resources>
    <string name="app_name">ConsumerBill</string>
    <string name="hi_welcome_here">Hi, Welcome here!!!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="don_t_have_account_yet">Don\'t have account yet?</string>
    <string name="email_address">Email Address *</string>
    <string name="create_account">Create Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="payments_show_name">Successfully received payment data for %s!</string>
</resources>